--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ logging.level.com.ttj=DEBUG
 
 logging.file=${java.io.tmpdir}/web-scraper.log
 
+spring.data.mongodb.uri=mongodb+srv://cano:cano1234@cluster0.jbor6.mongodb.net/arquitecturaHexagonal?retryWrites=true&w=majority
+spring.data.mongodb.database=arquitecturaHexagonal
